amélioration du pull pour les repos + regroupement du json pour les stars